syntax = "proto3";

package relay;
option go_package = "github.com/bloXroute-Labs/solana-gateway/pkg/protobuf";
import "types.proto";

service Relay {
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc RefreshToken(RefreshTokenRequest) returns (RefreshTokenResponse);
}

message RegisterRequest {
    string auth_header = 1;
    string version = 2;
    int64 server_port = 3;
}

message RegisterResponse {
    string udp_address = 1;
    string jwt_token = 2;
    types.TxPropagationConfig tx_propagation_config = 3;
}

message RefreshTokenRequest {
    string auth_header = 1;
    string jwt_token = 2;
}

message RefreshTokenResponse {
    string jwt_token = 1;
}